force-app/main/default/objects/Lead/fields/Company_Email__c.field-meta.xml
<CustomField>
    <fullName>Company_Email__c</fullName>
    <label>Company Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>