force-app/main/default/objects/Lead/fields/Company_Fax__c.field-meta.xml
<CustomField>
    <fullName>Company_Fax__c</fullName>
    <label>Company Fax</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>