force-app/main/default/objects/Lead/fields/Company_Headquater_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Headquater_Address__c</fullName>
    <label>Company Headquater Address</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>