force-app/main/default/objects/Lead/fields/Company_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Phone_Number__c</fullName>
    <label>Company Phone Number</label>
    <required>true</required>
    <type>Phone</type>
</CustomField>