force-app/main/default/objects/Lead/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <picklist>
        <picklistValues>
            <fullName>IT</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Engineering</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>HR</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Finance</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>