force-app/main/default/objects/Lead/fields/Intrests__c.field-meta.xml
<CustomField>
    <fullName>Intrests__c</fullName>
    <label>Interests</label>
    <picklist>
        <picklistValues>
            <fullName>Business Services</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Education</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Energy</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Financial Services</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Healthcare</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>High Tech</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Media, Entertainment</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Other</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Technical Services</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Utilities</fullName>
        </picklistValues>
    </picklist>
    <type>MultiselectPicklist</type>
</CustomField>