force-app/main/default/objects/Lead/fields/isPartner__c.field-meta.xml
<CustomField>
    <fullName>isPartner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isPartner</label>
    <type>Checkbox</type>
</CustomField>