force-app/main/default/objects/Lead/fields/Primary__c.field-meta.xml
<CustomField>
    <fullName>Primary__c</fullName>
    <label>Primary</label>
    <picklist>
        <picklistValues>
            <fullName>No</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Yes</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>