force-app/main/default/objects/Lead/fields/ProductInterest__c.field-meta.xml
<CustomField>
    <fullName>ProductInterest__c</fullName>
    <label>Product Interest</label>
    <picklist>
        <picklistValues>
            <fullName>GC1000 series</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>GC5000 series</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>GC3000 series</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>