force-app/main/default/objects/Lead/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <picklist>
        <picklistValues>
            <fullName>APAC</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>EMEA</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>AMER</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>