force-app/main/default/objects/Lead/fields/T_C_Accepted__c.field-meta.xml
<CustomField>
    <fullName>T_C_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>T&amp;C Accepted</label>
    <type>Checkbox</type>
</CustomField>