force-app/main/default/objects/Lead/recordTypes/Customer.recordType-meta.xml
<RecordType>
    <fullName>Customer</fullName>
    <active>true</active>
    <businessProcess>Customer Process</businessProcess>
    <label>Customer</label>
</RecordType>