force-app/main/default/objects/Lead/recordTypes/Partner_Initiated.recordType-meta.xml
<RecordType>
    <fullName>Partner_Initiated</fullName>
    <active>true</active>
    <businessProcess>Partner Process</businessProcess>
    <label>Partner Initiated</label>
</RecordType>