force-app/main/default/objects/Lead/validationRules/Region_on_Lead_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Region_on_Lead_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Region__c,&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Region__c</errorDisplayField>
    <errorMessage>Region is mandatory</errorMessage>
</ValidationRule>